[tool.poetry]
name = "llvm-linker"
version = "0.1.0"
description = ""
authors = ["Hongbo Wen"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7"
regex = "^2021.8.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
